add_url_to_movies_table
