# storage/api-docs/api-docs.json
@@ -326,6 +326,11 @@
                                                         "format": "url",
                                                         "example": "https://example.com/inception.jpg"
                                                     },
+                                                    "video_url": {
+                                                        "type": "string",
+                                                        "format": "url",
+                                                        "example": "https://www.youtube.com/shorts/-vi0ScxVxoQ"
+                                                    },
                                                     "release_date": {
                                                         "type": "string",
                                                         "format": "date",
@@ -416,6 +421,11 @@
                                         "format": "url",
                                         "example": "https://example.com/inception.jpg"
                                     },
+                                    "video_url": {
+                                        "type": "string",
+                                        "format": "url",
+                                        "example": "https://www.youtube.com/shorts/-vi0ScxVxoQ"
+                                    },
                                     "release_date": {
                                         "type": "string",
                                         "format": "date",
@@ -464,6 +474,11 @@
                                                     "type": "string",
                                                     "format": "url",
                                                     "example": "https://example.com/inception.jpg"
+                                                },
+                                                "video_url": {
+                                                    "type": "string",
+                                                    "format": "url",
+                                                    "example": "https://www.youtube.com/shorts/-vi0ScxVxoQ"
                                                 },
                                                 "release_date": {
                                                     "type": "string",
@@ -618,6 +633,11 @@
                                         "format": "url",
                                         "example": "https://example.com/inception_updated.jpg"
                                     },
+                                    "video_url": {
+                                        "type": "string",
+                                        "format": "url",
+                                        "example": "https://www.youtube.com/shorts/-vi0ScxVxoQ"
+                                    },
                                     "release_date": {
                                         "type": "string",
                                         "format": "date",
@@ -665,6 +685,10 @@
                                                 "thumbnail": {
                                                     "type": "string",
                                                     "example": "https://example.com/inception_updated.jpg"
+                                                },
+                                                "video_url": {
+                                                    "type": "string",
+                                                    "example": "https://www.youtube.com/shorts/-vi0ScxVxoQ"
                                                 },
                                                 "release_date": {
                                                     "type": "string",
@@ -752,126 +776,6 @@
                         "bearerAuth": []
                     }
                 ]
-            }
-        },
-        "/api/v1/movies/:id": {
-            "get": {
-                "tags": [
-                    "Movies"
-                ],
-                "summary": "Show Movie Details",
-                "description": "Retrieve details of a specific movie along with reviews. Requires authentication.",
-                "operationId": "b71e07747928b6c13ab4703c56c802c4",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Movie ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "example": 4
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Movie retrieved successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "success"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Movie retrieved"
-                                        },
-                                        "data": {
-                                            "properties": {
-                                                "movie": {
-                                                    "properties": {
-                                                        "id": {
-                                                            "type": "integer",
-                                                            "example": 4
-                                                        },
-                                                        "title": {
-                                                            "type": "string",
-                                                            "example": "Inception Geeno"
-                                                        },
-                                                        "description": {
-                                                            "type": "string",
-                                                            "example": "A mind-bending thriller about dreams within dreams."
-                                                        },
-                                                        "thumbnail": {
-                                                            "type": "string",
-                                                            "format": "url",
-                                                            "example": "https://example.com/inception.jpg"
-                                                        },
-                                                        "release_date": {
-                                                            "type": "string",
-                                                            "format": "date",
-                                                            "example": "2010-07-16"
-                                                        },
-                                                        "genre": {
-                                                            "type": "string",
-                                                            "example": "Science Fiction"
-                                                        },
-                                                        "rating": {
-                                                            "properties": {
-                                                                "average": {
-                                                                    "type": "number",
-                                                                    "format": "float",
-                                                                    "example": 0
-                                                                },
-                                                                "count": {
-                                                                    "type": "integer",
-                                                                    "example": 0
-                                                                }
-                                                            },
-                                                            "type": "object"
-                                                        }
-                                                    },
-                                                    "type": "object"
-                                                },
-                                                "reviews": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "object"
-                                                    }
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Movie not found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "error"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Movie not found"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
             },
             "delete": {
                 "tags": [
@@ -879,7 +783,7 @@
                 ],
                 "summary": "Delete a movie",
                 "description": "Deletes a specific movie by its ID.",
-                "operationId": "bfc2c5b44b13218b5438f4a06eb838bb",
+                "operationId": "a58c449766357b214a64d7b06ffc4803",
                 "parameters": [
                     {
                         "name": "id",
@@ -972,14 +876,139 @@
                 ]
             }
         },
-        "/api/v1/admin/movies/:id/reviews": {
+        "/api/v1/movies/:id": {
+            "get": {
+                "tags": [
+                    "Movies"
+                ],
+                "summary": "Show Movie Details",
+                "description": "Retrieve details of a specific movie along with reviews. Requires authentication.",
+                "operationId": "b71e07747928b6c13ab4703c56c802c4",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Movie ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 4
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Movie retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Movie retrieved"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "movie": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer",
+                                                            "example": 4
+                                                        },
+                                                        "title": {
+                                                            "type": "string",
+                                                            "example": "Inception Geeno"
+                                                        },
+                                                        "description": {
+                                                            "type": "string",
+                                                            "example": "A mind-bending thriller about dreams within dreams."
+                                                        },
+                                                        "thumbnail": {
+                                                            "type": "string",
+                                                            "format": "url",
+                                                            "example": "https://example.com/inception.jpg"
+                                                        },
+                                                        "video_url": {
+                                                            "type": "string",
+                                                            "format": "url",
+                                                            "example": "https://www.youtube.com/shorts/-vi0ScxVxoQ"
+                                                        },
+                                                        "release_date": {
+                                                            "type": "string",
+                                                            "format": "date",
+                                                            "example": "2010-07-16"
+                                                        },
+                                                        "genre": {
+                                                            "type": "string",
+                                                            "example": "Science Fiction"
+                                                        },
+                                                        "rating": {
+                                                            "properties": {
+                                                                "average": {
+                                                                    "type": "number",
+                                                                    "format": "float",
+                                                                    "example": 0
+                                                                },
+                                                                "count": {
+                                                                    "type": "integer",
+                                                                    "example": 0
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                },
+                                                "reviews": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "type": "object"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Movie not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "error"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Movie not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/movies/:id/reviews": {
             "post": {
                 "tags": [
                     "Movies"
                 ],
                 "summary": "Submit a Review for a Movie",
                 "description": "Submit a rating and comment for a specific movie. Requires authentication.",
-                "operationId": "2220fc8b0fb58ff90070e74a060d8421",
+                "operationId": "0e478f08a1d3166c591b10f6084a6800",
                 "parameters": [
                     {
                         "name": "id",
